Bug 1141455 - Do not treat an element with tabindex as an interactive content in label. r=smaug